--- a/templates/base.html
+++ b/templates/base.html
@@ -47,9 +47,9 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'ventas_index' %}">
+                  <a class="nav-link" href="{% url 'producto_list' %}">
                     <img class="offcanvas-nav-icon" src="{% static 'icons/ventas.png' %}" alt="icono de inventario">
-                    Ventas
+                    Productos
                   </a>
                 </li>
                 <li class="nav-item">
