updated report and order details views

--- a/mod_login/templates/mod_login/register_user.html
+++ b/mod_login/templates/mod_login/register_user.html
@@ -27,6 +27,7 @@
 						<ul class="d-flex flex-column gap-4">
 							<li>El usuario debe tener menos de 150 caracteres.</li>
 							<li>La contraseña debe contener al menos 8 caracteres.</li>
+							<li>La contraseña y el nombre de usuario no pueden ser los mismos.</li>
 						</ul>
 					</div>
         </form>
