Tipos de producto update

--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -11,6 +11,10 @@
         Añadir Producto
         <img class="btn-icon" src="../static\icons\Add.svg" alt="icono de pdf">
       </a>
+      <a  class="btn d-inline" href="{% url 'tipo_producto_list' %}">
+        Tipos de Producto
+        <img class="btn-icon" src="../static\icons\Add.svg" alt="icono de pdf">
+      </a>
     </div>
     <section class="bottom-section d-flex justify-content-center">
       <div class="table-responsive">
