--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -3,22 +3,22 @@
 {% block content %}
     <h1 class="module-title">Productos</h1>
     <div class="buttons-container col-12 mt-5">
-      <a  class="btn d-inline"  href="{% url 'producto_report' %}">
+      <a class="btn d-inline" href="{% url 'producto_report' %}">
         Generar Reporte
-        <img class="btn-icon" src="../static\icons\PDF.svg" alt="icono de pdf">
+        <img class="btn-icon" src="../static/icons/PDF.svg" alt="icono de pdf">
       </a>
-      <a  class="btn d-inline" href="{% url 'producto_crear' %}">
+      <a class="btn d-inline" href="{% url 'producto_crear' %}">
         Añadir Producto
-        <img class="btn-icon" src="../static\icons\Add.svg" alt="icono de pdf">
+        <img class="btn-icon" src="../static/icons/Add.svg" alt="icono de pdf">
       </a>
-      <a  class="btn d-inline" href="{% url 'tipo_producto_list' %}">
+      <a class="btn d-inline" href="{% url 'tipo_producto_list' %}">
         Tipos de Producto
-        <img class="btn-icon" src="../static\icons\Add.svg" alt="icono de pdf">
+        <img class="btn-icon" src="../static/icons/Add.svg" alt="icono de pdf">
       </a>
     </div>
     <section class="bottom-section d-flex justify-content-center">
       <div class="table-responsive">
-        <table class="table table-striped">
+        <table id="productoTable" class="table table-striped">
           <thead>
             <tr class="table-header">
               <th scope="col">Imagen</th>
@@ -35,76 +35,68 @@
             </tr>
           </thead>
           <tbody>
-      {% for producto in object_list %}
-          <tr>
-          <td>
-            <div class="img-table-container">
-              {% if producto.imagen %}
-                  <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}">
-              {% else %}
-                  <p>No image available</p>
+            {% for producto in object_list %}
+            <tr>
+              <td>
+                <div class="img-table-container">
+                  {% if producto.imagen %}
+                      <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}">
+                  {% else %}
+                      <p>No image available</p>
+                  {% endif %}
+                </div>
+              </td>
+              <td><p>{{ producto.id }}</p></td>
+              <td><p>{{ producto.tipo_producto }}</p></td>
+              <td><p>{{ producto.nombre }}</p></td>
+              <td><p>{{ producto.precio_venta }}</p></td>
+              <td><p>{{ producto.proveedor.nombre }}</p></td>
+              <td><p>{{ producto.stock }}</p></td>
+              <td><p>{{ producto.codigo_lote }}</p></td>
+              <td><p>{{ producto.fecha_vencimiento }}</p></td>
+              <td><p>{{ producto.descripcion }}</p></td>
+              <td>
+                <div class="action-icons-container">
+                  <a href="{% url 'producto_editar' producto.id %}">
+                    <img src="../static/icons/Edit.svg" alt="icono de editar">
+                  </a>
+                  <a href="{% url 'producto_borrar' producto.id %}">
+                    <img src="../static/icons/Delete.svg" alt="icono de editar">
+                  </a>   
+                 </div>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <div class="pagination">
+          <span class="step-links">
+              {% if page_obj.has_previous %}
+                  <a href="?page=1">&laquo; primera</a>
+                  <a href="?page={{ page_obj.previous_page_number }}">anterior</a>
               {% endif %}
-            </div>
-          </td>
-          <td>
-            <p>{{ producto.id }}</p>
-          </td>
-          <td>
-            <p>{{ producto.tipo_producto }}</p>
-          </td>
-          <td>
-            <p>{{ producto.nombre }}</p>
-          </td>
-          <td>
-            <p>{{ producto.precio_venta }}</p>
-          </td>
-          <td>
-            <p>{{ producto.proveedor.nombre }}</p>
-          </td>
-          <td>
-            <p>{{ producto.stock }}</p>
-          </td>
-          <td>
-            <p>{{ producto.codigo_lote }}</p>
-          </td>
-          <td>
-            <p>{{ producto.fecha_vencimiento }}</p>
-          </td>
-          <td>
-            <p>{{ producto.descripcion }}</p>
-          </td>
-          <td>
-            <div class="action-icons-container">
-              <a href="{% url 'producto_editar' producto.id %}">
-                <img src="../static\icons\Edit.svg" alt="icono de editar">
-              </a>
-              <a href="{% url 'producto_borrar' producto.id %}">
-                <img src="../static\icons\Delete.svg" alt="icono de editar">
-              </a>   
-             </div>
-          </td>
-        </tr>
-      {% endfor %}
-        </tbody>
-      </table>
-      <div class="pagination">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; primera</a>
-                <a href="?page={{ page_obj.previous_page_number }}">anterior</a>
-            {% endif %}
 
-            <span class="current">
-                Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
-            </span>
+              <span class="current">
+                  Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+              </span>
 
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">siguiente</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">última &raquo;</a>
-            {% endif %}
-        </span>
-      </div>
+              {% if page_obj.has_next %}
+                  <a href="?page={{ page_obj.next_page_number }}">siguiente</a>
+                  <a href="?page={{ page_obj.paginator.num_pages }}">última &raquo;</a>
+              {% endif %}
+          </span>
+        </div>
       </div>
     </section>
-{% endblock %}
 
+    <!-- Include jQuery -->
+    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Include DataTables JS -->
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+    
+    <script>
+        $(document).ready(function() {
+            $('#productoTable').DataTable();
+        });
+    </script>
+{% endblock %}
