--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_list.html
@@ -96,7 +96,9 @@
     
     <script>
         $(document).ready(function() {
-            $('#productoTable').DataTable();
+            $('#productoTable').DataTable({
+               "dom": 't'
+            });
         });
     </script>
 {% endblock %}
