--- a/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_report.html
+++ b/mod_ventas/sub_mod_productos/templates/sub_mod_productos/producto_report.html
@@ -13,7 +13,8 @@
 			<div class="logo-container-report">
 				<img class="logo" src="{% static 'img/logo.svg' %}" alt="Logo">
 				DUNAMIS S.A
-			</div>		
+			</div>
+      <a href="{% url 'producto_report_export' %}" class="btn btn-primary">Exportar a Excel</a>		
 		</div>
       <div class="table-responsive">
       	<table class="table report-table table-striped">
