--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -296,7 +296,7 @@ a .card:hover {
 .buttons-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   gap: 16px;
   padding: 0;
@@ -323,8 +323,12 @@ a .card:hover {
 }
 
 /******** BOTTOM SECTION ********/
-.bottom-section {
+/* .bottom-section {
   padding: 32px 12px;
+} */
+
+.table-responsive{
+  width: 100%!important;
 }
 
 .table {
