--- a/mod_ventas/sub_mod_ordenes/templates/sub_mod_ordenes/orden_report.html
+++ b/mod_ventas/sub_mod_ordenes/templates/sub_mod_ordenes/orden_report.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h1 class="module-title">Reporte de Órdenes</h1>
+    <a href="{% url 'ordenes_reporte_excel' %}" class="btn btn-primary">Exportar a Excel</a>
     <section class="bottom-section d-flex justify-content-center">
       <div class="table-responsive">
         <table class="table table-striped">
