--- a/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_report.html
+++ b/mod_ventas/sub_mod_proveedores/templates/sub_mod_proveedores/proveedor_report.html
@@ -9,6 +9,7 @@
 			<img class="logo" src="{% static 'img/logo.svg' %}" alt="Logo">
 			DUNAMIS S.A
 		</div>
+		<a href="{% url 'proveedor_reporte_excel' %}" class="btn btn-primary">Exportar a Excel</a>		
 	</div>
 	<div class="table-responsive">
 		<table class="table report-table table-striped">
